--- a/woocommerce.css
+++ b/woocommerce.css
@@ -541,7 +541,8 @@
     width: 350px; }
     .main-navigation .shopping-cart .shopping-cart-dropdown .product_list_widget {
       max-height: 60vh;
-      overflow-y: scroll; }
+      overflow-y: auto;
+      padding: 2px 0; }
     .main-navigation .shopping-cart .shopping-cart-dropdown .mini_cart_item a {
       white-space: normal; }
 
